--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
+	<title>Die_wundersamen_Farben_von_Wasser_und_Eis-Wasser</title>
+	<style>
+		html {
+			height:100%;
+		}
+		body {
+			background-color:#FFF;
+			margin:0;
+			height:100%;
+		}
+	</style>
+	<!-- copy these lines to your document head: -->
 
+	<meta name="viewport" content="user-scalable=yes, width=1680" />
+	<link href='https://fonts.googleapis.com/css?family=Space+Grotesk:700&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Space+Grotesk:300&subset=latin' rel='stylesheet' type='text/css'>
+
+	<!-- end copy -->
+  </head>
+  <body>
+	<!-- copy these lines to your document: -->
+
+	<div id="diewundersamenfarbenvonwasserundeiswasser_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1680px;height:10000px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="Die_wundersamen_Farben_von_Wasser_und_Eis-Wasser.hyperesources/diewundersamenfarbenvonwasserundeiswasser_hype_generated_script.js?15992"></script>
+	</div>
+
+	<!-- end copy -->
+  </body>
+</html>
